# algorithms

./: backup.cpp  exm  exm.c  features.cpp  mpEx.cpp  slurm-522649.out
2023_2/q1/: main_q1.cpp  q1
2023_2/q2/: main_q2.cpp
2023_2/q3/: main_q3.cpp  q3
EDB1/TAD_Conjunto-ListaEncadeada/header/: Conjunto.h  No.h
EDB1/TAD_Conjunto-ListaEncadeada/src/: Conjunto.cpp  main.cpp
EDB1/TAD_Conjunto-ListaEncadeada/test/: teste.cpp
EDB1/busca/: binary  binary.cpp  c_mais  linear.cpp  ternario.cpp  valgrind-out.txt
EDB1/busca/cpp/: CMakeLists.txt  binary.cpp  head.h  main_class.cpp  main_test.cpp
EDB1/busca/java/: Binary.java  Linear.java
EDB1/list/: list.cpp  list.h  main  main.cpp
EDB1/sorting/: Implements.cpp  Main_class  Main_class.cpp  Tests.cpp  header.h
EDB1/treino/: t1  t1.cpp  t2  t2.cpp  t3  t3.cpp
EDB1/treino/ED_ListaDuplamenteEncadeada/header/: ListaDuplamenteEncadeada.h
EDB1/treino/meu/: No.h  listaDup.cpp  listaDup.h
EDB2/: arvore_n-aria.txt
EDB2/arv/: ArvF.c  ArvMain.c  arvHeaders.h
EDB2/atv2/: info.h
EDB2/proj1/: certo  functions.c  headers.h  main.c
EDB2/proj2/: figas  file.csv  functions.c  headers.h  main.c  makefile  projB
EDB2/proj3/: functions.c  header.h
EDB2/proj4/: Makefile  README.md  avl.c  avl.h  figas  jogo.c  jogo.h  jogoEXE  main.c  palavras.txt  tabuleiro.txt  trie.c  trie.h
RedBlack/: RedAux.cpp  RedBlack.hpp  main.cpp
bTree/: bAux.cpp  header.hpp  main.cpp
hash/src/: TabelaHash.cpp
treino/: DadosEntrada.h  q1  q1.cpp  q2.cpp  q3  q3.cpp  q5  q5.cpp  q6  q6.cpp  q7  q7.cpp  q8  q8.cpp
(+31 files in other folders)
